--- a/blocks/normalize/normalize.css
+++ b/blocks/normalize/normalize.css
@@ -1,32 +1,8 @@
-@font-face {
-    font-family: 'Inter';
-    src: url("../Font_Inter/Inter-Regular.woff") format("woff"),
-         url("../Font_Inter/Inter-Regular.woff2") format("woff2");
-    weight: 400;
-    font-style: normal;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url("../Font_Inter/Inter-Bold.woff") format("woff"),
-       url("../Font_Inter/Inter-Bold.woff2") format("woff2");
-  weight: 700;
-  font-style: normal;
-}
-
-@font-face {
-  font-family: 'Inter';
-  src: url("../Font_Inter/Inter-ExtraBold.woff") format("woff"),
-       url("../Font_Inter/Inter-ExtraBold.woff2") format("woff2");
-  weight: 900;
-  font-style: normal;
-}
-
 .page {
     width: 100%;
     height: 100%;
     margin: 0;
-    font-family: 'Inter', sans-serif;
+    font-family: 'Inter-Regular', sans-serif;
     background: #2A2C2F;
     color: #FFFFFF;
     box-sizing: border-box;
@@ -38,7 +14,7 @@ img {
 }
 
 a {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter-Regular', sans-serif;
   color: #FFFFFF;
   text-decoration: none;
 }
