--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,10 +1,10 @@
 @media (min-width: 320px) {
     .cover__title {
-        font-weight: 900;
         font-size: 32px;
         line-height: 35px;
         text-align: center;
         margin: 33px 16px 16px 16px;
+        z-index: 1;
       }
 }
 
