--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,12 +3,15 @@
         display: flex;
         flex-direction: column;
         position: relative;
-        font-family: 'Inter', sans-serif;
-        font-weight: normal;
-        color: #FFFFFF;
         background: url(../../images/cover/cover-trains.jpg) no-repeat;
         background-size: cover;
         margin: 0 0 64px 0;
+        transition: .4s;
+      }
+
+      .cover:hover {
+        opacity: .3;
+        background-color: #2A2C2F;
       }
 }
 
