--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,6 +3,11 @@
         font-size: 24px;
         line-height: 24px;
         padding: 0 0 32px 0;
+        transition: .4s;
+      }
+      .footer__link:hover {
+        opacity: .3;
+        background-color: #2A2C2F;
       }
 }
 
