--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -2,10 +2,15 @@
     .header__lang-link {
         margin-left: 18px;
         margin-bottom: 6px;
-        color: #FFFFFF;
         font-size: 18px;
         line-height: 20px;
         text-decoration: none;
+        transition: .4s;
+      }
+
+      .header__lang-link:hover {
+        opacity: .3;
+        background-color: #2A2C2F;
       }
 }
 
