--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,7 +2,7 @@
     .intro__list {
         font-size: 12px;
         line-height: 18px;
-        font-weight: bold;
+        font-family: Inter-Bold;
         margin: 0;
         padding: 0;
         list-style: none;
