--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,8 +2,8 @@
     .intro__title {
         font-size: 32px;
         line-height: 35px;
-        font-weight: 900;
         margin: 0 0 40px 0;
+        font-family: Inter-Black;
       }
 }
 
