--- a/blocks/places/__title/place__title.css
+++ b/blocks/places/__title/place__title.css
@@ -1,8 +1,8 @@
 @media (min-width: 320px) {
     .place__title {
-        font-weight: 900;
         font-size: 32px;
         line-height: 35px;
+        font-family: Inter-Black;
         margin: 0;
         padding: 0 16px 32px 16px;
       }
@@ -12,8 +12,7 @@
 @media(min-width: 768px) {
     .place__title {
         margin: 0 0 48px 0;
-        padding: 0;  
-        font-weight: 900;
+        padding: 0;
         font-size: 42px;
         line-height: 46px;
       }
