--- a/pages/index.css
+++ b/pages/index.css
@@ -1,4 +1,4 @@
-@import url(../blocks/normalize/normalize.css);
+@import url(../blocks/global/global.css);
 
 @import url(../blocks/fonts/fonts.css);
 
@@ -6,6 +6,7 @@
 @import url(../blocks/cover/__title/cover__title.css);
 @import url(../blocks/cover/__subtitle/cover__subtitle.css);
 @import url(../blocks/cover/__overlay/cover__overlay.css);
+@import url(../blocks/cover/__title-link/cover__title-link.css);
 
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__links/footer__links.css);
