исправил замечания после первого ревью

--- a/blocks/image/__place/image__place.css
+++ b/blocks/image/__place/image__place.css
@@ -1,12 +1,14 @@
 @media (min-width: 320px) {
-  .footer__link {
-      margin: 0 0 32px 0;
-    }
+  .image__place {
+    padding: 0 0 32px 0;
+      }
 }
 
 
 @media(min-width: 768px) {
-
+  .image__place {
+    padding: 0;
+  }
 }
 
 
@@ -16,5 +18,5 @@
 
 
 @media(min-width: 1280px) {
-  
+    
 }
