--- a/blocks/list/list.css
+++ b/blocks/list/list.css
@@ -1,6 +1,8 @@
 @media (min-width: 320px) {
-  .footer__link {
-      margin: 0 0 32px 0;
+  .list {
+      list-style: none;
+      padding: 0;
+      margin: 0;
     }
 }
 
@@ -11,10 +13,10 @@
 
 
 @media(min-width: 1024px) {
-  
+
 }
 
 
 @media(min-width: 1280px) {
-  
+
 }
