--- a/blocks/place/__link/place__link.css
+++ b/blocks/place/__link/place__link.css
@@ -1,12 +1,14 @@
 @media (min-width: 320px) {
-  .footer__link {
-      margin: 0 0 32px 0;
+  .place__link {
+    margin: 0 0 32px 0;
     }
 }
 
 
 @media(min-width: 768px) {
-
+  .place__link {
+    margin: 0 0 48px 0;
+    }
 }
 
 
