--- a/blocks/text/text.css
+++ b/blocks/text/text.css
@@ -1,6 +1,7 @@
 @media (min-width: 320px) {
-  .footer__link {
-      margin: 0 0 32px 0;
+  .text {
+      font-size: 16px;
+      line-height: 26px;
     }
 }
 
@@ -11,10 +12,10 @@
 
 
 @media(min-width: 1024px) {
-  
+
 }
 
 
 @media(min-width: 1280px) {
-  
+
 }
