--- a/blocks/title/title.css
+++ b/blocks/title/title.css
@@ -1,12 +1,12 @@
 @media (min-width: 320px) {
-  .footer__link {
-      margin: 0 0 32px 0;
+  .title {
+      font-family: Inter-Black;
     }
 }
 
 
 @media(min-width: 768px) {
-
+  
 }
 
 
