--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -1,12 +1,22 @@
 @media (min-width: 320px) {
   .footer__link {
-      margin: 0 0 32px 0;
+      font-size: 24px;
+      line-height: 24px;
+      transition: .4s;
+    }
+    .footer__link:hover {
+      opacity: .3;
+      background-color: #2A2C2F;
     }
 }
 
 
 @media(min-width: 768px) {
-
+  .footer__link {
+      font-size: 16px;
+      line-height: 18px;
+      padding: 0 18px 0 0;
+    }
 }
 
 
