--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,13 +1,14 @@
 @media (min-width: 320px) {
-  .place__link {
+  .header__link {
+      margin-left: 18px;
+      margin-bottom: 6px;
       font-size: 18px;
-      line-height: 22px;
-      margin: 0;
-      text-decoration: underline;
+      line-height: 20px;
+      text-decoration: none;
       transition: .4s;
     }
 
-    .place__link:hover {
+    .header__link:hover {
       opacity: .3;
       background-color: #2A2C2F;
     }
@@ -15,7 +16,10 @@
 
 
 @media(min-width: 768px) {
-  
+  .header__link {
+      font-size: 24px;
+      line-height: 28px;
+    }
 }
 
 
