--- a/blocks/place/__list/__list-item/place__list-item.css
+++ b/blocks/place/__list/__list-item/place__list-item.css
@@ -5,26 +5,50 @@
 
 @media(min-width: 768px) {
   .place__list-item {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      margin-bottom: 73px;
-    }
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    margin-bottom: 73px;
+  }
 
-  .place__list-item >:nth-child(1n+1) {
-      width: calc(50% - 14px);
-      box-sizing: border-box;
-    }
+  .place__list-item >:nth-child(odd) {
+    width: calc(50% - 20px);
+    box-sizing: border-box;
+  }
+
+  .place__list-item >:nth-child(even) {
+    width: calc(50% - 8px);
+    box-sizing: border-box;
+  }
 }
 
 
 @media(min-width: 1024px) {
   .place__list-item {
-      margin-bottom: 80px;
+    margin-bottom: 80px;
+  }
+
+  .place__list-item >:nth-child(odd) {
+    width: calc(50% - 24px);
+    box-sizing: border-box;
+  }
+
+ .place__list-item >:nth-child(even) {
+    width: calc(50% - 8px);
+    box-sizing: border-box;
   }
 }
 
 
 @media(min-width: 1280px) {
-    
+  
+  .place__list-item >:nth-child(odd) {
+    width: calc(50% - 32px);
+    box-sizing: border-box;
+  }
+
+ .place__list-item >:nth-child(even) {
+    width: calc(50% - 8px);
+    box-sizing: border-box;
+  }  
 }
