--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -1,31 +1,29 @@
 @media (min-width: 320px) {
   .cover__subtitle {
+      margin: 0;
       font-size: 14px;
       line-height: 16px;
-      margin: 0 16px 33px 16px;
-      z-index: 1;
+      max-width: 266px;
     }
 }
 
 
 @media(min-width: 768px) {
   .cover__subtitle {
+      max-width: 360px;
       font-size: 18px;
       line-height: 22px;
-      margin: 0 204px 115px 204px;
     }
 }
 
 
 @media(min-width: 1024px) {
-.cover__subtitle {
-  margin: 0 332px 195px 332px;
-}
+  .cover__subtitle {
+    }
 }
 
 
 @media(min-width: 1280px) {
-.cover__subtitle {
-  margin: 0 412px 245px 412px;
-}
+  .cover__subtitle {
+    }
 }
