--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,15 +3,23 @@
         display: flex;
         flex-direction: column;
         position: relative;
-        background: url(../../images/cover/cover-trains.jpg) no-repeat;
-        background-size: cover;
         margin: 0 0 64px 0;
         transition: .4s;
       }
+      
+      .cover:after {
+        content: "";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        transition: .4s;
+      }
 
-      .cover:hover {
-        opacity: .3;
+      .cover:hover:after {
         background-color: #2A2C2F;
+        opacity: 0.8; 
       }
 }
 
