--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,5 +1,6 @@
 .link {
-  font-family: 'Inter-Regular', sans-serif;
+  font-family: 'Inter', sans-serif;
+  font-weight: normal;
   color: #FFFFFF;
   text-decoration: none;
   }
