--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,7 +2,8 @@
   width: 100%;
   height: 100%;
   margin: 0;
-  font-family: 'Inter-Regular', sans-serif;
+  font-family: 'Inter', sans-serif;
+  font-weight: normal;
   background: #2A2C2F;
   color: #FFFFFF;
   box-sizing: border-box;
