--- a/blocks/place/__string/place__string.css
+++ b/blocks/place/__string/place__string.css
@@ -1,13 +1,14 @@
 @media (min-width: 320px) {
-  .title {
-      font-family: Inter;
-      font-weight: 900;
+  .place__string {
+    margin: 0 0 32px 0;
     }
 }
 
 
 @media(min-width: 768px) {
-  
+  .place__string {
+    margin: 0 0 48px 0;
+    }
 }
 
 
