--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -3,7 +3,9 @@
     display: flex;
     flex-direction: column;
     position: relative;
-    margin: 0 0 64px 0;
+    max-width: 320px;
+    width: 100%;
+    margin: 0 auto 64px;
     transition: .4s;
   }
       
@@ -26,20 +28,22 @@
 
 @media(min-width: 768px) {
   .cover {
-    margin: 0 0 88px 0;
+    max-width: 768px;
+    margin: 0 auto 88px;
   }
 }
 
 
 @media(min-width: 1024px) {
   .cover {
-    margin: 0 0 92px 0;
+    max-width: 1024px;
+    margin: 0 auto 92px;
   }
 }
 
 
 @media(min-width: 1280px) {
   .cover {
-    margin: 12px 48px 92px 48px;
+    max-width: 1184px;
   }
 }
