--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,8 +2,8 @@
   .footer__copyright {
     font-size: 14px;
     line-height: 14px;
-    margin: 0;
-    padding: 16px 0 24px 0;
+    margin: auto;
+    padding-top: 16px;
   }
 }
 
@@ -11,7 +11,7 @@
 @media(min-width: 768px) {
   .footer__copyright {
     font-size: 14px;
-    line-height: 17px;
+    line-height: 16px;
     margin: 0;
     padding: 0;
   }
