--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -2,8 +2,9 @@
   .header {
     display: flex;
     height: 42px;
-    padding: 16px 16px 0;
-    margin: 0 0 48px;
+    margin: 16px auto 48px;
+    width: 100%;
+    max-width: 288px;
     align-items: flex-end;
   }
 }
@@ -11,8 +12,9 @@
 
 @media(min-width: 768px) {
   .header {
-    padding: 28px 24px 48px 24px;
-    margin: 0;
+    margin: 28px auto 48px;
+    max-width: 720px;
+    width: 100%;
     height: 52px;
   }
 }
@@ -20,13 +22,17 @@
 
 @media(min-width: 1024px) {
   .header {
-    padding: 28px 48px 48px 48px;
+    margin: 28px auto 48px;
+    width: 100%;
+    max-width: 928px;
   }
 }
 
 
 @media(min-width: 1280px) {
   .header {
-    padding: 28px 48px 56px 48px;
+    margin: 28px auto 56px;
+    width: 100%;
+    max-width: 1184px;
   }
 }
