--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -14,13 +14,13 @@
 
 @media(min-width: 1024px) {
   .intro__text {
-    margin: 0 238px 33px 0;
+    max-width: 690px;
+    margin: 0 0 33px 0;
+    height: 208px;
   }
 }
 
 
 @media(min-width: 1280px) {
-  .intro__text {
-    margin: 0 0 33px 0;
-  }
+  
 }
