--- a/blocks/intro/intro.css
+++ b/blocks/intro/intro.css
@@ -2,27 +2,32 @@
   .intro {
     display: flex;
     flex-direction: column;
-    margin: 0 16px 64px 16px;
+    max-width: 288px;
+    width: 100%;
+    margin: 0 auto 64px;
   }
 }
 
 
 @media(min-width: 768px) {
   .intro {
-     margin: 0 24px 88px 24px;
+    max-width: 720px;
+    margin: 0 auto 88px;
   }
 }
 
 
 @media(min-width: 1024px) {
   .intro {
-    margin: 0 48px 92px 48px;
+    max-width: 928px;
+    margin: 0 auto 92px;
   }
 }
 
 
 @media(min-width: 1280px) {
   .intro {
-    margin: 0 442px 92px 148px;
+    max-width: 984px;
+    margin: 0 auto 92px;
   }
 }
