--- a/blocks/lead/lead.css
+++ b/blocks/lead/lead.css
@@ -2,27 +2,32 @@
   .lead {
     display: flex;
     flex-direction: column;
-    margin-bottom: 64px;
+    max-width: 320px;
+    width: 100%;
+    margin: 0 auto 64px;
   }
 }
 
 
 @media(min-width: 768px) {
   .lead {
-    margin-bottom: 88px;
+    max-width: 768px;
+    margin: 0 auto 88px;
   }
 }
 
 
 @media(min-width: 1024px) {
   .lead {
-    margin: 0 48px 114px 48px;
+    max-width: 928px;
+    margin: 0 auto 114px;
   }
 }
 
 
 @media(min-width: 1280px) {
   .lead {
-    margin: 0 148px 92px 148px;
+    max-width: 984px;
+    margin: 0 auto 92px;
   }
 }
