--- a/blocks/place/__text/place__text.css
+++ b/blocks/place/__text/place__text.css
@@ -1,5 +1,7 @@
 @media (min-width: 320px) {
   .place__text {
+    font-size: 16px;
+    line-height: 26px;
     padding: 0 0 25px 0;
     margin: 0;
   }
@@ -7,7 +9,7 @@
 
 
 @media(min-width: 768px) {
-
+  
 }
 
 
