--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,14 +1,16 @@
 @media (min-width: 320px) {
   .cover {
+    background: url(../../images/cover/cover-trains.jpg) no-repeat;
+    background-size: cover;
+    min-height: 200px;
     display: flex;
     flex-direction: column;
     position: relative;
     max-width: 320px;
     width: 100%;
-    margin: 0 auto 64px;
+    margin: 16px auto 64px;
     transition: .4s;
   }
-      
   .cover:after {
     content: "";
     position: absolute;
@@ -16,34 +18,34 @@
     left: 0;
     width: 100%;
     height: 100%;
+    background-color: #2A2C2F;
+    opacity: 0.3;
     transition: .4s;
   }
-
   .cover:hover:after {
-    background-color: #2A2C2F;
-    opacity: 0.8; 
+    opacity: 0.8;
   }
 }
-
 
 @media(min-width: 768px) {
   .cover {
     max-width: 768px;
+    min-height: 480px;
     margin: 0 auto 88px;
   }
 }
 
-
 @media(min-width: 1024px) {
   .cover {
     max-width: 1024px;
+    min-height: 640px;
     margin: 0 auto 92px;
   }
 }
 
-
 @media(min-width: 1280px) {
   .cover {
     max-width: 1184px;
+    min-height: 740px;
   }
 }
