--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -2,27 +2,15 @@
   .footer__copyright {
     font-size: 14px;
     line-height: 14px;
-    margin: auto;
+    margin: 0;
     padding-top: 16px;
   }
 }
 
-
 @media(min-width: 768px) {
   .footer__copyright {
-    font-size: 14px;
     line-height: 16px;
     margin: 0;
     padding: 0;
   }
-}
-
-
-@media(min-width: 1024px) {
-    
-}
-
-
-@media(min-width: 1280px) {
-    
 }
