--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,30 +1,27 @@
 @media (min-width: 320px) {
   .footer {
+    display: flex;
+    flex-direction: column;
+    position: relative;
     max-width: 288px;
     width: 100%;
     margin: 0 auto 24px;
   }
 }
 
-
 @media(min-width: 768px) {
   .footer {
-    display: flex;
-    position: relative;
+    flex-direction: row;
     justify-content: space-between;
     max-width: 720px;
-    margin: 0 auto 24px;
   }
 }
-
 
 @media(min-width: 1024px) {
   .footer {
     max-width: 928px;
-    margin: 0 auto 24px;
   }
 }
-
 
 @media(min-width: 1280px) {
   .footer {
