--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,7 +1,7 @@
 @media (min-width: 320px) {
   .header {
     display: flex;
-    height: 42px;
+    min-height: 42px;
     margin: 16px auto 48px;
     width: 100%;
     max-width: 288px;
@@ -9,30 +9,23 @@
   }
 }
 
-
 @media(min-width: 768px) {
   .header {
     margin: 28px auto 48px;
     max-width: 720px;
-    width: 100%;
-    height: 52px;
+    min-height: 52px;
   }
 }
 
-
 @media(min-width: 1024px) {
   .header {
-    margin: 28px auto 48px;
-    width: 100%;
     max-width: 928px;
   }
 }
 
-
 @media(min-width: 1280px) {
   .header {
     margin: 28px auto 56px;
-    width: 100%;
     max-width: 1184px;
   }
 }
