--- a/blocks/intro/__text/intro__text.css
+++ b/blocks/intro/__text/intro__text.css
@@ -4,23 +4,15 @@
   }
 }
 
-
 @media(min-width: 768px) {
   .intro__text {
     margin: 0 0 33px 0;
   }
 }
 
-
 @media(min-width: 1024px) {
   .intro__text {
     max-width: 690px;
-    margin: 0 0 33px 0;
-    height: 208px;
+    max-height: 208px;
   }
-}
-
-
-@media(min-width: 1280px) {
-  
 }
