--- a/blocks/logo/logo.css
+++ b/blocks/logo/logo.css
@@ -5,22 +5,12 @@
     width: 142px;
     height: 100%;
     margin-right: auto;
+    min-height: inherit;
   }
 }
-
 
 @media (min-width: 768px) {
   .logo {
     width: 176px;
-    }
-}
-
-
-@media(min-width: 1024px) {
-  
-}
-
-
-@media(min-width: 1280px) {
-  
+  }
 }
