--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -1,23 +1,14 @@
 @media (min-width: 320px) {
   .place__website {
     padding: 0 16px;
+    margin-bottom: 32px;
   }
 }
-
 
 @media(min-width: 768px) {
   .place__website {
     align-self: flex-end;
     padding: 0;
+    margin-bottom: 48px;
   }
-}
-
-
-@media(min-width: 1024px) {
-    
-}
-
-
-@media(min-width: 1280px) {
-    
 }
