Вторая попытка в 29-м потоке

--- a/blocks/place/__url-heading/place__url-heading.css
+++ b/blocks/place/__url-heading/place__url-heading.css
@@ -2,6 +2,7 @@
   .place__url-heading {
     font-size: 12px;
     line-height: 12px;
+    text-transform: uppercase;
     color: #AAAAAA;
     letter-spacing: 2px;
     margin: 0;
