--- a/blocks/link/link.css
+++ b/blocks/link/link.css
@@ -1,5 +1,5 @@
 .link {
-  font-family: 'Inter', sans-serif;
+  font-family: 'Inter', Arial, sans-serif;
   font-weight: normal;
   color: #FFFFFF;
   text-decoration: none;
