--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,6 +1,8 @@
 @media (min-width: 320px) {
   .place__image {
     width: 100%;
+    object-position: top;
+    object-fit: contain;
     padding: 0 0 32px 0;
   }
 }
